--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>2.2.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.vincent_abgrall</groupId>
+    <groupId>com.fdorval</groupId>
     <artifactId>spoilgot</artifactId>
     <version>vincent_abgrall</version>
     <packaging>war</packaging>
